--- a/natours/package.json
+++ b/natours/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compiles": "node-sass sass/main.scss css/style.css -w"
+    "watch": "node-sass sass/main.scss css/style.css -w",
+    "compiles": "node-sass sass/main.scss css/style.comp.css",
+    "concat": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
+    "prefix": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^4.14.1"
+    "autoprefixer": "^10.0.2",
+    "concat": "^1.0.3",
+    "node-sass": "^4.14.1",
+    "postcss-cli": "^8.2.0"
   }
 }
